+ web downloader for csv

--- a/.env.example
+++ b/.env.example
@@ -22,3 +22,25 @@ DELAY_MS=500
 
 # Logging
 LOG_FILE=./logs/migration.log
+
+# Web Downloader Configuration
+# Copy this file to .env and update with your actual values
+
+# Login URL - The URL where you need to authenticate
+LOGIN_URL=https://example.com/login
+
+# Download URL - The URL to download the CSV file from (after authentication)
+DOWNLOAD_URL=https://example.com/export/csv
+
+# Authentication credentials
+WEB_USERNAME=your_username
+WEB_PASSWORD=your_password
+
+# Output configuration
+OUTPUT_DIR=./data
+DOWNLOAD_FILENAME=exported_data.csv
+
+# Form fields for login (customize based on your login form)
+# These define the field names used in the login form
+LOGIN_FORM_FIELD1=username
+LOGIN_FORM_FIELD2=password
