added paganini product importer

--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,7 @@ MAGENTO_MEDIA_PATH=/pub/media/catalog/product
 
 # CSV Configuration
 CSV_PATH=./products.csv
+PAGANINI_CSV_PATH=./data/paganini_data_*.csv
 
 # Batch Configuration
 START_ROW=0
