--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "migrate": "node product-migrate.js",
     "migrate-products": "node product-migrate.js",
     "migrate-customers": "node customer-migrate.js",
+    "migrate-paganini": "node paganini-migrate.js",
     "delete-products": "node product-delete.js",
     "web-download": "node web-download.js",
     "test": "node product-migrate.js"
